src/main/java/semantic/symbolTable/test/failing/inheritArray.ru
/? InvalidInheritanceException
struct A: Array Bool{}